src/antlr/frontend/FrontendParser.java
// Generated from src/antlr/frontend/FrontendParser.g4 by ANTLR 4.13.2
package antlr.frontend;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FrontendParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOCTYPE=1, JINJA_EXPR_START=2, JINJA_STMT_START=3, JINJA_COMMENT=4, TAG_OPEN=5, 
		TAG_CLOSE=6, TAG_SLASH=7, STYLE_TAG=8, CSS_LBRACE=9, CSS_RBRACE=10, CSS_COLON=11, 
		CSS_SEMICOLON=12, EQUALS=13, DOT=14, LBRACKET=15, RBRACKET=16, COMMA=17, 
		HASH=18, STRING=19, NUMBER=20, CSS_UNIT=21, CSS_IDENT=22, IDENTIFIER=23, 
		TEXT=24, WS=25, HTML_COMMENT=26, CSS_COMMENT=27, JINJA_EXPR_END=28, JINJA_STMT_END=29, 
		JINJA_IF=30, JINJA_ELIF=31, JINJA_ELSE=32, JINJA_ENDIF=33, JINJA_FOR=34, 
		JINJA_IN=35, JINJA_ENDFOR=36, JINJA_EXTENDS=37, JINJA_BLOCK=38, JINJA_ENDBLOCK=39, 
		JINJA_EQ=40, JINJA_NEQ=41, JINJA_LTE=42, JINJA_GTE=43, JINJA_LT=44, JINJA_GT=45, 
		JINJA_AND=46, JINJA_OR=47, JINJA_NOT=48, J_WS=49, J_JINJA_COMMENT=50, 
		J_HTML_COMMENT=51, J_CSS_COMMENT=52;
	public static final int
		RULE_document = 0, RULE_content = 1, RULE_contentItem = 2, RULE_htmlElement = 3, 
		RULE_tagName = 4, RULE_htmlAttribute = 5, RULE_attrName = 6, RULE_attrValue = 7, 
		RULE_styleElement = 8, RULE_cssRule = 9, RULE_cssSelector = 10, RULE_cssSelectorPart = 11, 
		RULE_cssSelectorItem = 12, RULE_cssDeclaration = 13, RULE_cssPropertyName = 14, 
		RULE_cssValue = 15, RULE_jinjaExpression = 16, RULE_jinjaExpr = 17, RULE_jinjaStatement = 18, 
		RULE_jinjaIfStatement = 19, RULE_jinjaElifStatement = 20, RULE_jinjaElseStatement = 21, 
		RULE_jinjaForStatement = 22, RULE_jinjaExtendsStatement = 23, RULE_jinjaBlockStatement = 24, 
		RULE_jinjaCondition = 25, RULE_jinjaStmtExpr = 26, RULE_text = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "content", "contentItem", "htmlElement", "tagName", "htmlAttribute", 
			"attrName", "attrValue", "styleElement", "cssRule", "cssSelector", "cssSelectorPart", 
			"cssSelectorItem", "cssDeclaration", "cssPropertyName", "cssValue", "jinjaExpression", 
			"jinjaExpr", "jinjaStatement", "jinjaIfStatement", "jinjaElifStatement", 
			"jinjaElseStatement", "jinjaForStatement", "jinjaExtendsStatement", "jinjaBlockStatement", 
			"jinjaCondition", "jinjaStmtExpr", "text"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'{{'", "'{%'", null, null, null, "'/'", "'style'", "'{'", 
			"'}'", "':'", "';'", "'='", null, null, null, null, "'#'", null, null, 
			null, null, null, null, null, null, null, "'}}'", "'%}'", "'if'", "'elif'", 
			"'else'", "'endif'", "'for'", "'in'", "'endfor'", "'extends'", "'block'", 
			"'endblock'", "'=='", "'!='", "'<='", "'>='", null, null, "'and'", "'or'", 
			"'not'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOCTYPE", "JINJA_EXPR_START", "JINJA_STMT_START", "JINJA_COMMENT", 
			"TAG_OPEN", "TAG_CLOSE", "TAG_SLASH", "STYLE_TAG", "CSS_LBRACE", "CSS_RBRACE", 
			"CSS_COLON", "CSS_SEMICOLON", "EQUALS", "DOT", "LBRACKET", "RBRACKET", 
			"COMMA", "HASH", "STRING", "NUMBER", "CSS_UNIT", "CSS_IDENT", "IDENTIFIER", 
			"TEXT", "WS", "HTML_COMMENT", "CSS_COMMENT", "JINJA_EXPR_END", "JINJA_STMT_END", 
			"JINJA_IF", "JINJA_ELIF", "JINJA_ELSE", "JINJA_ENDIF", "JINJA_FOR", "JINJA_IN", 
			"JINJA_ENDFOR", "JINJA_EXTENDS", "JINJA_BLOCK", "JINJA_ENDBLOCK", "JINJA_EQ", 
			"JINJA_NEQ", "JINJA_LTE", "JINJA_GTE", "JINJA_LT", "JINJA_GT", "JINJA_AND", 
			"JINJA_OR", "JINJA_NOT", "J_WS", "J_JINJA_COMMENT", "J_HTML_COMMENT", 
			"J_CSS_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FrontendParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FrontendParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FrontendParser.EOF, 0); }
		public JinjaExtendsStatementContext jinjaExtendsStatement() {
			return getRuleContext(JinjaExtendsStatementContext.class,0);
		}
		public TerminalNode DOCTYPE() { return getToken(FrontendParser.DOCTYPE, 0); }
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(56);
				jinjaExtendsStatement();
				}
				break;
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOCTYPE) {
				{
				setState(59);
				match(DOCTYPE);
				}
			}

			setState(62);
			content();
			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public List<ContentItemContext> contentItem() {
			return getRuleContexts(ContentItemContext.class);
		}
		public ContentItemContext contentItem(int i) {
			return getRuleContext(ContentItemContext.class,i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_content);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					contentItem();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentItemContext extends ParserRuleContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public JinjaStatementContext jinjaStatement() {
			return getRuleContext(JinjaStatementContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public ContentItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contentItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterContentItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitContentItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitContentItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentItemContext contentItem() throws RecognitionException {
		ContentItemContext _localctx = new ContentItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_contentItem);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				htmlElement();
				}
				break;
			case JINJA_EXPR_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				jinjaExpression();
				}
				break;
			case JINJA_STMT_START:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				jinjaStatement();
				}
				break;
			case STYLE_TAG:
			case NUMBER:
			case CSS_UNIT:
			case CSS_IDENT:
			case IDENTIFIER:
			case TEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				text();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RegularElementContext extends HtmlElementContext {
		public List<TerminalNode> TAG_OPEN() { return getTokens(FrontendParser.TAG_OPEN); }
		public TerminalNode TAG_OPEN(int i) {
			return getToken(FrontendParser.TAG_OPEN, i);
		}
		public List<TagNameContext> tagName() {
			return getRuleContexts(TagNameContext.class);
		}
		public TagNameContext tagName(int i) {
			return getRuleContext(TagNameContext.class,i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(FrontendParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(FrontendParser.TAG_CLOSE, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode TAG_SLASH() { return getToken(FrontendParser.TAG_SLASH, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public RegularElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterRegularElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitRegularElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitRegularElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StyleContext extends HtmlElementContext {
		public StyleElementContext styleElement() {
			return getRuleContext(StyleElementContext.class,0);
		}
		public StyleContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterStyle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitStyle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitStyle(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosingElementContext extends HtmlElementContext {
		public TerminalNode TAG_OPEN() { return getToken(FrontendParser.TAG_OPEN, 0); }
		public TagNameContext tagName() {
			return getRuleContext(TagNameContext.class,0);
		}
		public TerminalNode TAG_SLASH() { return getToken(FrontendParser.TAG_SLASH, 0); }
		public TerminalNode TAG_CLOSE() { return getToken(FrontendParser.TAG_CLOSE, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public SelfClosingElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterSelfClosingElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitSelfClosingElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitSelfClosingElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlElement);
		int _la;
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new RegularElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(TAG_OPEN);
				setState(78);
				tagName();
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680320L) != 0)) {
					{
					{
					setState(79);
					htmlAttribute();
					}
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(85);
				match(TAG_CLOSE);
				setState(86);
				content();
				setState(87);
				match(TAG_OPEN);
				setState(88);
				match(TAG_SLASH);
				setState(89);
				tagName();
				setState(90);
				match(TAG_CLOSE);
				}
				break;
			case 2:
				_localctx = new SelfClosingElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(TAG_OPEN);
				setState(93);
				tagName();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680320L) != 0)) {
					{
					{
					setState(94);
					htmlAttribute();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(TAG_SLASH);
				setState(101);
				match(TAG_CLOSE);
				}
				break;
			case 3:
				_localctx = new StyleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				styleElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TagNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FrontendParser.IDENTIFIER, 0); }
		public TerminalNode CSS_IDENT() { return getToken(FrontendParser.CSS_IDENT, 0); }
		public TerminalNode CSS_UNIT() { return getToken(FrontendParser.CSS_UNIT, 0); }
		public TagNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterTagName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitTagName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitTagName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagNameContext tagName() throws RecognitionException {
		TagNameContext _localctx = new TagNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tagName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlAttributeContext extends ParserRuleContext {
		public AttrNameContext attrName() {
			return getRuleContext(AttrNameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(FrontendParser.EQUALS, 0); }
		public AttrValueContext attrValue() {
			return getRuleContext(AttrValueContext.class,0);
		}
		public HtmlAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterHtmlAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitHtmlAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitHtmlAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlAttributeContext htmlAttribute() throws RecognitionException {
		HtmlAttributeContext _localctx = new HtmlAttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_htmlAttribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			attrName();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(109);
				match(EQUALS);
				setState(110);
				attrValue();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttrNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FrontendParser.IDENTIFIER, 0); }
		public TerminalNode CSS_IDENT() { return getToken(FrontendParser.CSS_IDENT, 0); }
		public TerminalNode CSS_UNIT() { return getToken(FrontendParser.CSS_UNIT, 0); }
		public TerminalNode STYLE_TAG() { return getToken(FrontendParser.STYLE_TAG, 0); }
		public AttrNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterAttrName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitAttrName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitAttrName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrNameContext attrName() throws RecognitionException {
		AttrNameContext _localctx = new AttrNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attrName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680320L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttrValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(FrontendParser.STRING, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FrontendParser.IDENTIFIER, 0); }
		public TerminalNode CSS_IDENT() { return getToken(FrontendParser.CSS_IDENT, 0); }
		public TerminalNode NUMBER() { return getToken(FrontendParser.NUMBER, 0); }
		public TerminalNode CSS_UNIT() { return getToken(FrontendParser.CSS_UNIT, 0); }
		public TerminalNode STYLE_TAG() { return getToken(FrontendParser.STYLE_TAG, 0); }
		public AttrValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).enterAttrValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FrontendParserListener ) ((FrontendParserListener)listener).exitAttrValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrontendParserVisitor ) return ((FrontendParserVisitor<? extends T>)visitor).visitAttrValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrValueContext attrValue() throws RecognitionException {
		AttrValueContext _localctx = new AttrValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attrValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 16253184L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
